feat: Implement Vehicle Fleet management and PayHere payment integration

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,9 @@ NEXT_PUBLIC_WHATSAPP_NUMBER=94771234567
 NEXT_PUBLIC_TAWKTO_PROPERTY_ID=your-tawk-property-id
 NEXT_PUBLIC_TAWKTO_WIDGET_ID=your-tawk-widget-id
 NEXT_PUBLIC_APP_URL=http://localhost:3000
+
+# PayHere Configuration
+PAYHERE_MODE=sandbox
+PAYHERE_MERCHANT_ID=your_merchant_id
+PAYHERE_MERCHANT_SECRET=your_merchant_secret
+PAYHERE_CURRENCY=LKR
