--- a/.env.local
+++ b/.env.local
@@ -5,3 +5,9 @@ NEXT_PUBLIC_WHATSAPP_NUMBER=94771234567
 NEXT_PUBLIC_TAWKTO_PROPERTY_ID=698b677b55a5d71c35acc03b
 NEXT_PUBLIC_TAWKTO_WIDGET_ID=1jh48ofj6
 NEXT_PUBLIC_APP_URL=http://localhost:3000
+
+# PayHere Configuration
+PAYHERE_MODE=sandbox
+PAYHERE_MERCHANT_ID=12345
+PAYHERE_MERCHANT_SECRET=your_merchant_secret
+PAYHERE_CURRENCY=LKR
