--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "cookie": "^1.0.2",
     "date-fns": "^4.1.0",
+    "fuse.js": "^7.1.0",
     "jose": "^6.1.3",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^2.5.2",
